--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,29 @@
 <div class="container">
   <div class="row">
+    <h1 class="col-6">Exercice 1</h1>
+    <app-exercice1></app-exercice1>
     <!-- Mettez ici le composant exercice 1 -->
   </div>
+
+  <br>
+
   <div class="row">
-    <app-exercice2></app-exercice2>
+    <h1 class="col-6">Exercice 2</h1>
+    <app-exercice2 (click)="displayOnConsole('clic')"></app-exercice2>
   </div>
+
+  <br>
+
   <div class="row">
-    <!-- Mettez ici le composant exercice 3 -->
-  </div>
-  <div class="row">
+    <h1 class="col-6">Exercice 3</h1>
+    <app-exercice3></app-exercice3>
       <!-- Mettez ici le composant exercice 3 -->
-    </div>
+  </div>
+
+  <br>
+
+  <div class="row">
+    <h1 class="col-6">Exercice 4</h1>
+    <app-exercice4></app-exercice4>
+  </div>
 </div>
